# ReadBuddy

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: app.py
backend/src/utils/: chat_qdrant.py  chat_rag.py  index_qdrant.py  index_redis.py  openai_utils.py  upload_s3.py
frontend/: package.json
frontend-pwa/: manifest.json  package-lock.json  package.json
frontend-pwa/public/: index.html  manifest.json
frontend-pwa/public/.well-known/: assetlinks.json
frontend-pwa/src/: App.css  App.js  CameraComponent.css  CameraComponent.js  index.css  index.js  serviceWorkerRegistration.js
frontend/src/: App.css  App.js  QuestionForm.css  QuestionForm.js
xiao_v1/: xiao_v1.ino
